# sbgn-pd-biocypher-adapter

./: .gitignore  LICENSE  README.md  create_knowledge_graph.py  pyproject.toml
.github/workflows/: ci.yml
config/: biocypher_config.yaml  schema_config.yaml
data/: glycolysis_lower.sbgn  glycolysis_upper.sbgn
docs/: design.md  example_cypher_queries.md  sbgn_to_biolink_mapping.md
sbgn_pd_adapter/: __init__.py  adapter.py  biolink_mapper.py  entity_matcher.py  sbgn_ml_parser.py
sketches/ffl_operator_regimes/: NOTE.md  rgcn_ffl_demo.py
sketches/reification_vs_missingness/: NOTE.md
sketches/rgcn_link_prediction/: PILOT_RESULTS.md  PILOT_V2_RESULTS.md  PREREGISTRATION.md  README.md  requirements.txt  rgcn_sketch.py  run_pilot.py  run_pilot_v2.py
sketches/rgcn_link_prediction/outputs/: pilot_results.json  pilot_v2_results.json  results.json
sketches/topological_followup/: DESIGN_NOTE.md
tests/: conftest.py  test_adapter.py  test_biolink_mapper.py  test_entity_matcher.py  test_parser.py
